# vcko-framework

./: .gitignore  LICENSE  README.md  REVIEWER_NOTES.md  pyproject.toml
conf/: centres.yaml  default.yaml
data/: README.md
docs/: getting_started.md
examples/: 01_quickstart.py
harness/: RESULTS_protocol.md  STORY_LOCK.md  registry.py
harness/benchmarks/: run_protocol_loco.py
harness/contracts/: protocol_data.py
harness/sanity/: protocol_sanity.py
results/phase_protocol_loco/: results.json  results_core6.json
scripts/: run_loco.py  run_mia.py
src/vcko/: __init__.py  aggregation.py  aggregator.py  artifact.py  builder.py  medium.py  partial.py  protocol.py  verification.py
src/vcko/clinical/: __init__.py  subgroups.py  validation.py
src/vcko/evaluation/: __init__.py  calibration.py  dca.py  metrics.py
src/vcko/privacy/: __init__.py  discrete_dp.py  dp.py  mia.py
tests/: test_artifact.py
